# open-api-code-generator

./: .gitignore  .trivyignore  CHANGELOG.md  CLAUDE.md  PUBLISHING.md  README-i18n.md  README.md  SPECIFICATION.md  benchmark.sh  codecov.yml  kls_database.db  openapi-spec.txt  run-example.sh  version-bump.sh
.claude/: config.json  context-memories.md  validation-commands.json  vibe-config.json
.claude/commands/: auto.md  orchestrator.md
.claude/quick-patterns/: README.md  api.ts  entity.ts  service.ts  test.ts
.container-use/: AGENT.md  environment.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature_request.md  roadmap-item.md
.github/workflows/: ci.yml  publish-packages.yml  publish-rust.yml  publish-typescript.yml  release.yml
docs/: README.md  build-guide-rust.md  build-guide-typescript.md  conditional-validation-guide.md  developer-integration-guide.md  i18n-requirements-analysis.md  implementation-priorities.md  improvement-recommendations.md  validation-best-practices.md
docs/api/: .gitkeep  README.md
docs/architecture/: .gitkeep  backend-ddd-architecture.md
docs/database/: .gitkeep
docs/deployment/: .gitkeep
docs/development/: .gitkeep  project-setup-checklist.md  safe-coding.md  vibe-coding-patterns.md
docs/examples/: .gitkeep  ddd-code-examples.md  functional-programming-patterns.md
docs/openapi-3.1.0/: README.md
docs/security/: .gitkeep
docs/specifications/: .gitkeep
docs/testing/: .gitkeep  vibe-testing-strategies.md
docs/troubleshooting/: .gitkeep  README.md
examples/: README.md  allof-inheritance-example.yaml  anyof-flexible-unions-example.yaml  complex-composition-example.yaml  comprehensive-test-api.yaml  external-schema-example.yaml  oneof-polymorphism-example.yaml  sample-api.yaml  schema-composition-test-api.yaml
generated_rust/: build.gradle.kts
implementation/rust/: .gitignore  Cargo.toml  README.md  ci-check.sh
implementation/rust/.cargo/: config.toml
implementation/rust/benches/: performance.rs.bak
implementation/rust/src/: errors.rs  generator.rs  generator_tests.rs  lib.rs  main.rs  parser.rs  templates.rs  types.rs
implementation/rust/tests/: integration_tests.rs  parser_tests.rs  simplified_property_tests.rs
(+181 files in other folders)
