[package]
name = "openapi-codegen-rust"
version = "0.0.1-alpha"
edition = "2021"
authors = ["OpenAPI CodeGen"]
license = "Apache-2.0"
description = "OpenAPI Code Generator - Rust Implementation with ultra-fast performance"
repository = "https://github.com/krhrtky/open-api-code-generator"
keywords = ["openapi", "code-generation", "spring-boot", "kotlin", "rust"]

[lib]
name = "openapi_codegen_rust"
path = "src/lib.rs"

[[bin]]
name = "openapi-codegen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
handlebars = "6.3"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.1", features = ["serde"] }
rayon = "1.8"
walkdir = "2.4"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
# Additional testing utilities
criterion = "0.5"  # For benchmarking
proptest = "1.4"   # For property-based testing

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true